# bazel_third_party

./: README.md  WORKSPACE
com_github_planetscale_vtprotobuf/: BUILD.bazel  README.md  deps.bzl  gazelle.patch
com_github_twitchtv_twirp/: BUILD.bazel  README.md  deps.bzl  gazelle.patch
