load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "go_proto_twirp",
    plugin = "@com_github_twitchtv_twirp//protoc-gen-twirp",
    suffix = ".twirp.go",
    valid_archive = False,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_twitchtv_twirp//:go_default_library",
        "@com_github_twitchtv_twirp//ctxsetters:go_default_library",
        "@com_github_twitchtv_twirp//vendor/github.com/golang/protobuf/jsonpb:go_default_library",
    ],
)
