load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "go_proto_twirp",
    plugin = "@com_github_twitchtv_twirp//protoc-gen-twirp",
    suffix = ".twirp.go",
    valid_archive = False,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_twitchtv_twirp//:go_default_library",
        "@com_github_twitchtv_twirp//ctxsetters:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
